--- a/Default.WebApp.Template.Server/appsettings.json
+++ b/Default.WebApp.Template.Server/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=.\\SQLEXPRESS;Initial Catalog=ProjectDatabase;Integrated Security=True;TrustServerCertificate=true"
+  },
   "AllowedHosts": "*"
 }
