Add authentification and authorization.

--- a/Default.WebApp.Template.Server/appsettings.json
+++ b/Default.WebApp.Template.Server/appsettings.json
@@ -8,5 +8,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=.\\SQLEXPRESS;Initial Catalog=ProjectDatabase;Integrated Security=True;TrustServerCertificate=true"
   },
+  "TokenSettings": {
+    "SecretKey": "secretKeyToBeUpdated",
+    "ExpirationInMinutes": 30
+  },
   "AllowedHosts": "*"
 }
