--- a/Default.WebApp.Template.Server/Default.WebApp.Template.Server.csproj
+++ b/Default.WebApp.Template.Server/Default.WebApp.Template.Server.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -6,20 +6,21 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0">
+	  <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	</PackageReference>
+    <PackageReference Include="MediatR" Version="12.2.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Default.WebApp.Template.Application\Default.WebApp.Template.Application.csproj" />
     <ProjectReference Include="..\Default.WebApp.Template.Client\Default.WebApp.Template.Client.csproj" />
     <ProjectReference Include="..\Default.WebApp.Template.Infrastrucutre\Default.WebApp.Template.Infrastrucutre.csproj" />
     <ProjectReference Include="..\Default.WebApp.Template.Shared\Default.WebApp.Template.Shared.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Controllers\" />
-    <Folder Include="Common\" />
-    <Folder Include="Composition\" />
   </ItemGroup>
 
 </Project>
