--- a/Default.WebApp.Template.Tests/Default.WebApp.Template.Tests.csproj
+++ b/Default.WebApp.Template.Tests/Default.WebApp.Template.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -10,11 +10,31 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.0" />
-    <PackageReference Include="NUnit" Version="3.13.3" />
-    <PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
-    <PackageReference Include="NUnit.Analyzers" Version="3.6.1" />
-    <PackageReference Include="coverlet.collector" Version="6.0.0" />
+    <PackageReference Include="AutoFixture" Version="4.18.1" />
+	<PackageReference Include="AutoFixture.AutoNSubstitute" Version="4.18.1" />
+	<PackageReference Include="AutoFixture.Idioms" Version="4.18.1" />
+	<PackageReference Include="AutoFixture.NUnit3" Version="4.18.1" />
+	<PackageReference Include="EntityFrameworkCore.AutoFixture" Version="2.1.0" />
+	<PackageReference Include="FluentAssertions" Version="6.12.0" />
+	<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.0" />
+	<PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.0" />
+	<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
+	<PackageReference Include="NSubstitute" Version="5.1.0" />
+	<PackageReference Include="NUnit" Version="3.13.3" />
+	<PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
+	<PackageReference Include="NUnit.Analyzers" Version="3.6.1">
+	  <PrivateAssets>all</PrivateAssets>
+	  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	</PackageReference>
+	<PackageReference Include="coverlet.collector" Version="6.0.0">
+	  <PrivateAssets>all</PrivateAssets>
+	  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	</PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Default.WebApp.Template.Application\Default.WebApp.Template.Application.csproj" />
+    <ProjectReference Include="..\Default.WebApp.Template.Server\Default.WebApp.Template.Server.csproj" />
   </ItemGroup>
 
 </Project>
